--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
   text-decoration: none;
   color: var(--primary-text-color);
   font-weight: 500;
-  line-height: 1, 17;
+  line-height: 1.17;
 }
 .link:hover,
 .link:focus {
@@ -51,6 +51,7 @@ body {
 }
 .footer-link {
   color: var(--white-color);
+  font-weight: 400;
 }
 .opacity-link {
   opacity: 60%;
@@ -103,7 +104,6 @@ body {
   padding: 0;
   overflow: hidden;
   border: 0;
-  clip: rect(0 0 0 0);
 }
 
 .post-title {
@@ -127,7 +127,6 @@ body {
 .section-title {
   font-size: 36px;
   line-height: 1.17;
-  font-weight: 700;
   text-align: center;
 }
 /* Section 4 */
@@ -192,8 +191,8 @@ body {
   line-height: 1.88;
 }
 .item {
-  width: 370;
-  height: 404;
+  width: 370px;
+  height: 404px;
 }
 .list-item {
   display: flex;
